# PiCapture

./: CMakeLists.txt  README.md
src/: PiCapture.cpp  cap.h  main.cpp
